// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableActions getFieldCellActions should render correctly for undefined functions 1`] = `
Array [
  <ToggleColumn
    Component={[Function]}
    isEsqlMode={false}
    onToggleColumn={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
]
`;

exports[`TableActions getFieldCellActions should render correctly for undefined functions 2`] = `Array []`;

exports[`TableActions getFieldCellActions should render the panels correctly for defined onFilter function 1`] = `
Array [
  <FilterExist
    Component={[Function]}
    isEsqlMode={false}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <ToggleColumn
    Component={[Function]}
    isEsqlMode={false}
    onToggleColumn={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
]
`;

exports[`TableActions getFieldValueCellActions should render correctly for hideFilteringOnComputedColumns set to true 1`] = `
Array [
  <FilterIn
    Component={[Function]}
    hideFilteringOnComputedColumns={true}
    isEsqlMode={false}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "isComputedColumn": true,
          "kbnFieldType": KbnFieldType {
            "esTypes": Array [
              "string",
              "text",
              "match_only_text",
              "keyword",
              "version",
              "_type",
              "_id",
            ],
            "filterable": true,
            "name": "string",
            "sortable": true,
          },
          "spec": Object {
            "aggregatable": false,
            "name": "message",
            "scripted": false,
            "searchable": false,
            "shortDotsEnable": false,
            "type": "string",
          },
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <FilterOut
    Component={[Function]}
    hideFilteringOnComputedColumns={true}
    isEsqlMode={false}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "isComputedColumn": true,
          "kbnFieldType": KbnFieldType {
            "esTypes": Array [
              "string",
              "text",
              "match_only_text",
              "keyword",
              "version",
              "_type",
              "_id",
            ],
            "filterable": true,
            "name": "string",
            "sortable": true,
          },
          "spec": Object {
            "aggregatable": false,
            "name": "message",
            "scripted": false,
            "searchable": false,
            "shortDotsEnable": false,
            "type": "string",
          },
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <Copy
    Component={[Function]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "isComputedColumn": true,
          "kbnFieldType": KbnFieldType {
            "esTypes": Array [
              "string",
              "text",
              "match_only_text",
              "keyword",
              "version",
              "_type",
              "_id",
            ],
            "filterable": true,
            "name": "string",
            "sortable": true,
          },
          "spec": Object {
            "aggregatable": false,
            "name": "message",
            "scripted": false,
            "searchable": false,
            "shortDotsEnable": false,
            "type": "string",
          },
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
    toasts={
      Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      }
    }
  />,
]
`;

exports[`TableActions getFieldValueCellActions should render correctly for undefined functions 1`] = `
Array [
  <Copy
    Component={[Function]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
    toasts={
      Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      }
    }
  />,
]
`;

exports[`TableActions getFieldValueCellActions should render the panels correctly for defined onFilter function 1`] = `
Array [
  <FilterIn
    Component={[Function]}
    isEsqlMode={false}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <FilterOut
    Component={[Function]}
    isEsqlMode={false}
    onFilter={[MockFunction]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
  />,
  <Copy
    Component={[Function]}
    row={
      FieldRow {
        "columnsMeta": undefined,
        "dataViewField": Object {
          "aggregatable": false,
          "conflictDescriptions": undefined,
          "count": 0,
          "customDescription": undefined,
          "customLabel": undefined,
          "defaultFormatter": undefined,
          "esTypes": undefined,
          "lang": undefined,
          "name": "message",
          "readFromDocValues": false,
          "script": undefined,
          "scripted": false,
          "searchable": false,
          "subType": undefined,
          "type": "string",
        },
        "displayNameOverride": undefined,
        "flattenedValue": "test",
        "isPinned": false,
        "name": "message",
      }
    }
    toasts={
      Object {
        "add": [MockFunction],
        "addDanger": [MockFunction],
        "addError": [MockFunction],
        "addInfo": [MockFunction],
        "addSuccess": [MockFunction],
        "addWarning": [MockFunction],
        "get$": [MockFunction],
        "remove": [MockFunction],
      }
    }
  />,
]
`;
